Convert sources to dropdown
Any more than 5 sources and it starts taking up too much space. We want there to be actual content visible within the first page scroll...

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -13,14 +13,14 @@ layout: default
 	{%- endif %}
 
 	{%- if page.sources %}
-	<div id="pagesrc">
-		<p>Sources:</p>
+	<details id="pagesrc">
+		<summary>Sources</summary>
 		<ul>
 			{%- for source in page.sources %}
 			{% include code_source.html src=source %}
 			{%- endfor %}
 		</ul>
-	</div>
+	</details>
 	{%- endif %}
 </header>
 
