--- a/css/global.css
+++ b/css/global.css
@@ -59,14 +59,22 @@ h2, h3, h4, h5, h6 {
 	body:not(.compact) :is(d-box, d-choices) + & { margin-block-start: var(--adjacent-spacing) }
 	body:not(.compact) &:has(+ d-box, + d-choices) { margin-block-end: var(--adjacent-spacing) }
 }
+h4, h5, h6 { padding-inline-start: 0.8rem }
 h1 { font-size: 2.5em }
 h2 { font-size: 2.25em }
 h3 { font-size: 2em }
-h4 { font-size: 1.5em }
-h5 { font-size: 1.2em }
+h4 {
+	font-size: 1.5em;
+	border-inline-start: 0.2rem solid;
+}
+h5 {
+	font-size: 1.2em;
+	border-inline-start: 0.2rem double;
+}
 h6 {
 	font-size: 1em;
 	color: color-mix(in srgb, var(--white), var(--gray));
+	border-inline-start: 0.15rem dotted;
 }
 /* General text */
 p, ul { margin-block: 0.5em }
