--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -13,7 +13,7 @@ layout: default
 	{%- endif %}
 
 	{%- if page.sources %}
-	<details id="pagesrc">
+	<details id="pagesrc" {%- if page.sources.size <= 4 %} open {%- endif -%}>
 		<summary>Sources</summary>
 		<ul>
 			{%- for source in page.sources %}
