--- a/css/global.css
+++ b/css/global.css
@@ -187,6 +187,8 @@ img {
 		display: block;
 		width: 30em;
 		padding-inline: min(2.25em, 3.5vw);
+
+		body.compact & { margin-block: 0.5em }
 	}
 }
 /* #endregion */
