--- a/css/global.css
+++ b/css/global.css
@@ -77,9 +77,9 @@ h6 {
 	border-inline-start: 0.15rem dotted;
 }
 /* General text */
-p, ul { margin-block: 0.5em }
+p, ul, ol { margin-block: 0.5em }
 li { margin-block: 0.2em }
-p, ul, li {
+p, ul, ol, li {
 	&:first-child { margin-block-start: 0 }
 	&:last-child { margin-block-end: 0 }
 }
@@ -87,6 +87,7 @@ p:empty {
 	min-height: 1em;
 	margin-block: 0;
 }
+li > :is(ul, ol) { margin-block-start: 0 }
 a { /* Global links */
 	color: var(--white);
 	text-decoration: 0.1em solid underline;
@@ -100,10 +101,10 @@ hr {
 	--adjacent-spacing: calc(var(--border-width) + 1em);
 	max-width: 100%;
 
-	body:not(.compact) :is(d-box, d-choices) + & {
+	body:not(.compact) :is(d-box, d-choices, d-option-panel) + & {
 		margin-block-start: var(--adjacent-spacing);
 	}
-	body:not(.compact) &:has(+ d-box, + d-choices) {
+	body:not(.compact) &:has(+ d-box, + d-choices, d-option-panel) {
 		margin-block-end: var(--adjacent-spacing);
 	}
 
@@ -381,10 +382,37 @@ body {
 		}
 	}
 }
-#pagecred, #pagedesc, #pagesrc {
+#pagecred, #pagedesc {
 	margin-block: 0.5em;
-
 	&:last-child { margin-block-end: 0 }
+}
+#pagesrc, #pagetoc {
+	border-image: url("../assets/images/textbox/light_transparent.png") 16 / var(--border-width) / calc(0.75 * var(--border-width)) var(--border-width);
+	margin-inline: calc(0.5 * var(--border-width));
+	margin-block: var(--border-width) calc(0.5em + var(--border-width));
+	&:last-child { margin-block-end: 0.5em }
+
+	summary {
+		cursor: pointer;
+		display: block;
+		position: relative;
+		padding-inline-start: 1em;
+
+		&::before {
+			content: "";
+			background: center / contain no-repeat;
+			width: var(--size);
+			height: var(--size);
+			position: absolute;
+			left: -0.2em;
+			top: calc(50% - (0.5 * var(--size)));
+			--size: 0.75em;
+		}
+	}
+	&:is(:hover, :focus-within, [open]) summary {
+		color: var(--yellow);
+		&::before { background-image: url("../assets/images/heart.png") }
+	}
 }
 #pagecred {
 	color: var(--gray);
@@ -398,6 +426,16 @@ body {
 #pagesrc a:not([href]) {
 	text-decoration-style: dotted;
 	cursor: not-allowed;
+}
+#pagetoc {
+	ol { counter-reset: toc }
+	li {
+		counter-increment: toc;
+		&::marker {
+			font-family: "DeltaFont Condensed", var(--font);
+			content: counters(toc, ".") ".  ";
+		}
+	}
 }
 /* Footer */
 #sitefoot {
@@ -434,7 +472,7 @@ d-box, d-choices {
 		 * Increase spacing between neighboring boxes to account for border outset */
 		margin: var(--border-width) calc(1.5 * var(--border-width));
 		:is(d-box, d-choices, d-option-panel) + & { margin-block-start: calc((2 * var(--border-width)) + 0.2em) }
-		:is(p, ul) + & { margin-block-start: calc(var(--border-width) + 0.5em) }
+		:is(p, ul, ol) + & { margin-block-start: calc(var(--border-width) + 0.5em) }
 		&:has(+ h2, + h3, + h4, + h5, + h6) { margin-block-end: calc(var(--border-width) + 1em) }
 
 		padding: 0.1em 0.2em;
