Add table of contents to individual pages
Also add the close_toc flag for particularly long TOCs

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -24,7 +24,7 @@ layout: default
 	{%- endif %}
 
 	{%- if page.toc %}
-	<details id="pagetoc" open>
+	<details id="pagetoc" {%- unless page.close_toc %} open {%- endunless %}>
 		<summary>Contents</summary>
 		<ol>
 			{%- for heading in page.toc %}
