--- a/css/global.css
+++ b/css/global.css
@@ -393,7 +393,7 @@ body {
 	margin-block: 0.5em;
 	&:last-child { margin-block-end: 0 }
 }
-#pagesrc, #pagetoc {
+#pagesrc, #pagetoc, #pageseealso {
 	border-image: url("../assets/images/textbox/light_transparent.png") 16 / var(--border-width) / calc(0.75 * var(--border-width)) var(--border-width);
 	margin-inline: calc(0.5 * var(--border-width));
 	margin-block: var(--border-width) calc(0.5em + var(--border-width));
