Strip HTML from tab titles

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>
 		{%- if page.title and page.url != "/" %}
-			{{- page.title | append: " | " | append: site.title -}}
+			{{- page.title | strip_html | append: " | " | append: site.title -}}
 		{%- else -%}
 			{{- site.title -}}
 		{%- endif -%}
