--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -39,7 +39,7 @@ layout: default
 		<summary>See also</summary>
 		<ul>
 			{%- for link in page.see_also %}
-			<li><a href="{{ link.url }}">{{ link.name }}</a>
+			<li><a href="{{ link.url | relative_url }}">{{ link.name }}</a>
 				{%- if link.for %}, for {{ link.for }}
 				{%- endif -%}
 			</li>
