--- a/css/global.css
+++ b/css/global.css
@@ -103,22 +103,34 @@ a { /* Global links */
 	&:hover, &:focus-within { color: var(--lightyellow); }
 }
 hr {
-	border-color: var(--gray);
-	margin-block: 1em;
 	max-width: 100%;
-	--adjacent-spacing: 1em;
 
-	body:not(.compact) :is(d-box, d-choices, d-option-panel) + & {
-		margin-block-start: var(--adjacent-spacing);
-	}
-	body:not(.compact) &:has(+ d-box, + d-choices, d-option-panel) {
-		margin-block-end: var(--adjacent-spacing);
+	&:not(.hr2) {
+		border: none;
+		position: relative;
+		margin-block: 2em;
+		overflow: visible;
+		height: 0.2em;
+		background: linear-gradient(to right, var(--white) calc(50% - 3em), transparent  calc(50% - 2em) calc(50% + 2em), var(--white) calc(50% + 3em));
+
+		&::before {
+			content: "";
+			display: block;
+			width: 2em;
+			height: 2em;
+			background: url("/deltascript/assets/images/savepoint.png") center / contain no-repeat;
+			position: absolute;
+			left: 50%;
+			top: 50%;
+			transform: translate(-50%, -50%);
+		}
 	}
 
 	&.hr2 {
-		opacity: 0.5;
+		color: var(--gray);
 		width: 35.4em;
 		margin-inline-start: 0;
+		margin-block: 1em;
 	}
 }
 /* #region Color-specific classes */
