Add a dim colors mode
The stark white on black can give you eyestrain if you're looking at it too long (MY EYES HURT!!!) so now introducing!! dim colors mode where everything's toned down

--- a/_includes/config.html
+++ b/_includes/config.html
@@ -12,6 +12,11 @@
 			Compact mode
 		</label>
 
+		<label for="toggle-dim" class="toggle">
+			<input type="checkbox" id="toggle-dim" class="visually-hidden">
+			Dim colors
+		</label>
+
 		{%- comment %}
 		<label for="toggle-opendyslexic" class="toggle">
 			<input type="checkbox" id="toggle-opendyslexic" class="visually-hidden">
