Simplify d-choices offset feature
Now you don't need to add the "shift-left/right" classes, you can just set the offset and it'll handle that for you

--- a/css/global.css
+++ b/css/global.css
@@ -907,8 +907,7 @@ d-choices {
 				--size: 0.75em;
 			}
 
-			&.shift-right::after { left: calc(9em + var(--offset)) }
-			&.shift-left::after { left: calc(9em - var(--offset)) }
+			&[offset]::after { left: calc(9em + var(--offset)) }
 		}
 	}
 
