Use condensed font for d-options
Didn't realize that was why all the spacing was off LOL. Ah well

--- a/css/global.css
+++ b/css/global.css
@@ -959,6 +959,7 @@ d-choices {
 }
 d-option {
 	display: block;
+	font-family: "DeltaFont Condensed", var(--font);
 
 	/* Selectable options */
 	d-choices:not([noninteractive]) &,
