Collapse page sources/contents automatically
- Sources are only really relevant for the sickos who want to check the game files themselves; most people probably won't be interested
- Page contents tend to get pretty long, and it's better to have page content immediately visible than to have the TOC taking up the first two scrolls. Removing close_toc key as a result

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -13,7 +13,7 @@ layout: default
 	{%- endif %}
 
 	{%- if page.sources %}
-	<details id="pagesrc" {%- if page.sources.size <= 4 %} open {%- endif -%}>
+	<details id="pagesrc">
 		<summary>Sources</summary>
 		<ul>
 			{%- for source in page.sources %}
@@ -24,7 +24,7 @@ layout: default
 	{%- endif %}
 
 	{%- if page.toc %}
-	<details id="pagetoc" {%- unless page.close_toc %} open {%- endunless %}>
+	<details id="pagetoc">
 		<summary>Contents</summary>
 		<ol>
 			{%- for heading in page.toc %}
