Condense nested dialogue text
Yep it's another case of Damn that makes a lot more sense how they fit all that text in there

--- a/css/global.css
+++ b/css/global.css
@@ -705,6 +705,7 @@ d-box {
 		d-box {
 			position: absolute;
 			font-size: 0.6em;
+			font-family: "DeltaFont Condensed", var(--font);
 			/* Reset full-size features */
 			background-color: transparent;
 			border-image: unset;
